--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,15 @@
-asgiref==3.7.2
-attr==0.3.2
-brotli==1.1.0
-brotlicffi==1.1.0.0
-ConfigParser==6.0.0
-contextlib2==21.6.0
-cryptography==42.0.2
-docutils==0.20.1
-h2==4.1.0
-HTMLParser==0.0.2
-importlib_metadata==6.11.0
-ipython==8.18.1
-ipywidgets==8.1.1
-jnius==1.1.0
-js==1.0
-keyring==24.3.0
-lockfile==0.12.2
-mock==5.1.0
-Pillow==10.1.0
-Pillow==10.2.0
-protobuf==4.25.2
-pyodide==0.0.2
-pyOpenSSL==24.0.0
-python-dotenv==1.0.1
-railroad==0.5.0
-simplejson==3.19.2
-Sphinx==7.2.6
-thread==0.1.3
-tornado==6.4
-truststore==0.8.0
-urllib3_secure_extra==0.1.0
-watchdog==4.0.0
-xmlrpclib==1.0.1
-zstandard==0.22.0
+blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+docopt==0.6.2
+Flask==3.0.2
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+pipreqs==0.4.13
+requests==2.31.0
+urllib3==2.2.0
+Werkzeug==3.0.1
+yarg==0.1.9
